# transytion

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  chaining.rst  conf.py  decorators.rst  example.rst  index.rst
examples/: simple_rec_tween.py  tween_then_call.py
src/transytion/: __init__.py
src/transytion/ease_funcs/: __init__.py
